--- a/dictionary.html
+++ b/dictionary.html
@@ -20,16 +20,16 @@
           <p class="card-text">First, add words in the dictionary, and in the other window write a word and check if this word there is in the dictionary</p>
           <div class="input-group flex-nowrap">
             <span class="input-group-text" id="addon-wrapping"><img src="https://img.icons8.com/ios-glyphs/30/000000/ball-point-pen.png"/></span>
-            <input type="text" class="form-control" id="words" placeholder="write a word" aria-label="write a word" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" id="added-word" placeholder="write a word" aria-label="write a word" aria-describedby="addon-wrapping">
           </div>
           <button type="button" class="btn btn-primary" onclick="addWords();">add the word in the dictionary</button>
           <div class="input-group flex-nowrap">
             <span class="input-group-text" id="addon-wrapping"><img src="https://img.icons8.com/external-gradak-royyan-wijaya/24/000000/external-find-gradak-interface-gradak-royyan-wijaya-2.png"/></span>
-            <input type="text" class="form-control" id="check" placeholder="find a word" aria-label="find a word" aria-describedby="addon-wrapping">
+            <input type="text" class="form-control" id="searchedWord" placeholder="find a word" aria-label="find a word" aria-describedby="addon-wrapping">
           </div>
           <button type="button" class="btn btn-primary" onclick="checkWord();">find a word in the dictionary</button>
         </div>
-        <h5 id="displayResult"></h5>
+        <h5 id="dictionary-query-message"></h5>
       </div>
     </div>  
 
